front/src/carbure/assets/css/index.css
@import "./fonts.css";
@import "./theme.css";

* {
  box-sizing: border-box;
}

a {
  text-decoration: none;
  color: var(--black);
}

body {
  display: flex;
  margin: 0;
  font-family: var(--font-family);
  font-size: var(--font-size);
  line-height: 1.5em;
  background-color: var(--body);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow: hidden;
}

#root {
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  overflow: auto;
  align-items: flex-start;
}

#app {
  display: flex;
  flex-direction: column;
  flex: 1;
  min-width: 100%;
}

button,
input,
textarea,
select {
  font-family: var(--font-family);
}

